--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "redis": "^3.0.2",
     "validator": "^13.11.0"
